<resources>
    <string name="app_name">MovieApp</string>
    <string name="now_playing">Now playing</string>
    <string name="upcoming">Upcoming</string>
    <string name="trending">Trending</string>
    <string name="title_movie_list">Movies</string>
    <string name="title_movie_detail">Movie Detail</string>
    <string name="movie_poster">Movie poster</string>
    <string name="title">Title</string>
    <string name="year">Year</string>
    <string name="rating">Rating</string>
    <string name="votes">Votes</string>
    <string name="checkout_movie">Checkout %s ! More information: %s</string>
    <string name="runtime">Runtime</string>
    <string name="original_languages">Original languages</string>
    <string name="release_date">Release date</string>
    <string name="language">Language:</string>
    <string name="release">Release:</string>
    <string name="genres">Genres:</string>
    <string name="cast">Cast</string>
    <string name="videos">Videos</string>
    <string name="video_thumbnail">Video thumbnail</string>
</resources>
